# ProjectOrbit

./: CMakeLists.txt
Dependencies/GLAD/include/glad/: glad.h
Dependencies/GLAD/src/: glad.c
Documentation/: Note on Project Orbit.txt
Src/: Main.cpp
